@@ -240,6 +240,7 @@ static struct option strip_options[] =
   {"keep-symbol", required_argument, 0, 'K'},
   {"output-format", required_argument, 0, 'O'},	/* Obsolete */
   {"output-target", required_argument, 0, 'O'},
+  {"output-file", required_argument, 0, 'o'},
   {"preserve-dates", no_argument, 0, 'p'},
   {"remove-section", required_argument, 0, 'R'},
   {"strip-all", no_argument, 0, 's'},
@@ -772,7 +773,7 @@ filter_symbols (abfd, obfd, osyms, isyms, symcount)
 	   even if relocatable is false.  External users of the
 	   library containing the $idata section may reference these
 	   symbols.  */
-	  keep = 1;
+	keep = 1;
       else if ((flags & BSF_GLOBAL) != 0	/* Global symbol.  */
 	       || (flags & BSF_WEAK) != 0
 	       || bfd_is_und_section (bfd_get_section (sym))
@@ -782,6 +783,10 @@ filter_symbols (abfd, obfd, osyms, isyms, symcount)
 	keep = (strip_symbols != STRIP_DEBUG
 		&& strip_symbols != STRIP_UNNEEDED
 		&& ! convert_debugging);
+      else if (bfd_get_section (sym)->comdat)
+	/* COMDAT sections store special information in local
+	   symbols, so we cannot risk stripping any of them.  */
+	keep = 1;
       else			/* Local symbol.  */
 	keep = (strip_symbols != STRIP_UNNEEDED
 		&& (discard_locals != LOCALS_ALL
@@ -1835,7 +1840,7 @@ strip_main (argc, argv)
   struct section_list *p;
   char *output_file = NULL;
 
-  while ((c = getopt_long (argc, argv, "b:i:I:j:K:N:s:O:d:F:L:G:R:SpgxXVvW:",
+  while ((c = getopt_long (argc, argv, "I:O:F:K:N:R:o:sSpdgxXVv",
 			   strip_options, (int *) 0)) != EOF)
     {
       switch (c)
@@ -1967,7 +1972,7 @@ copy_main (argc, argv)
   struct section_list *p;
   struct stat statbuf;
 
-  while ((c = getopt_long (argc, argv, "b:i:I:j:K:N:s:O:d:F:L:R:SpgxXVvW:",
+  while ((c = getopt_long (argc, argv, "b:i:I:j:K:N:s:O:d:F:L:G:R:SpgxXVvW:",
 			   copy_options, (int *) 0)) != EOF)
     {
       switch (c)
@@ -2360,10 +2365,8 @@ copy_main (argc, argv)
     output_target = input_target;
 
   if (preserve_dates)
-    {
-      if (stat (input_filename, &statbuf) < 0)
-	fatal (_("Cannot stat: %s: %s"), input_filename, strerror (errno));
-    }
+    if (stat (input_filename, & statbuf) < 0)
+      fatal (_("Cannot stat: %s: %s"), input_filename, strerror (errno));
 
   /* If there is no destination file then create a temp and rename
      the result into the input.  */
