@@ -1,3 +1,7 @@
+2001-06-27  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* objcopy.c (strip_main): Accept -o command line switch.
+
 2001-06-11  Alan Modra  <amodra@bigpond.net.au>
 
 	Merge from mainline.
